monitoring/istio/service-b-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
  - service-b
  http:
  - route:
    - destination:
        host: service-b
        subset: v1
      weight: 10
    - destination:
        host: service-b
        subset: v2
      weight: 90
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,5xx
